--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
     <!-- 引入资源 -->
     <link rel="stylesheet" href="<%= BASE_URL %>css/common.css">
     <link rel="stylesheet" href="<%= BASE_URL %>css/iconfont/iconfont.css">
+
+    <script src="https://pv.sohu.com/cityjson?ie=utf-8"></script>
     
 
     <title><%= htmlWebpackPlugin.options.title %></title>
