--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,13 @@
     <link rel="stylesheet" href="<%= BASE_URL %>css/common.css">
     <link rel="stylesheet" href="<%= BASE_URL %>css/iconfont/iconfont.css">
 
+    <!-- 城市定位 -->
     <script src="https://pv.sohu.com/cityjson?ie=utf-8"></script>
+
+    <!-- 引入swiper资源 -->
+    <link rel="stylesheet" href="<%= BASE_URL %>libs/swiper-4.1.0.min.css">
+	<script src="<%= BASE_URL %>libs/swiper-4.1.0.min.js"></script>
+
     
 
     <title><%= htmlWebpackPlugin.options.title %></title>
