--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="<%= BASE_URL %>css/iconfont/iconfont.css">
 
     <!-- 城市定位 -->
-    <script src="https://pv.sohu.com/cityjson?ie=utf-8"></script>
+    <!-- <script src="https://pv.sohu.com/cityjson?ie=utf-8"></script> -->
 
     <!-- 引入swiper资源 -->
     <link rel="stylesheet" href="<%= BASE_URL %>libs/swiper-4.1.0.min.css">
@@ -28,7 +28,14 @@
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app"></div>
+    <style>
+        #app{ display: flex; height:100%;}
+        #app div{ margin : auto;}
+    </style>
+    <div id="app">
+        <div>喵喵网努力加载中...</div>
+        
+    </div>
     <!-- built files will be auto injected -->
   </body>
 </html>  
